# Holovibes

./: .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  0 - circles_mask.ppm  1 - circles_mask.ppm  240927_capture_7.holo  AUTHORS.md  Adimec-Quartz-2A750-Mono_12bit.bfml  BenchmarkViewer.ipynb  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  CMakeUserPresets.json  CONTRIBUTING.md  DEVELOPERS.md  Holovibes.sln  LICENSE  ProcessAccumulation.ps1  ProcessHoloFiles.ps1  ProcessRegistration.ps1  PropertySheet.props  README.md  SETUP.md  TODO.md  TUTORIAL.md  build.py  build.sh  conanfile.py  conanfile.txt  dev.py  doxygen_config  image.txt  out-2.holo  out.holo  release.sh  requirements.txt  run.py  run.sh  run_integration_tests.py  (+9 more)
Backend/: CMakeLists.txt
Backend/cuda_includes/: barycentre.cuh  bilateral_filter.cuh  bw_area.cuh  chart_mean_vessels.cuh  common.cuh  contrast_correction.cuh  convolution.cuh  cuda_memory.cuh  fresnel_transform.cuh  hsv.cuh  input_filter.cuh  laplacian_kernels.cuh  moments_treatments.cuh  noise_filter.cuh  otsu.cuh  percentile.cuh  rgb.cuh  segment_vessels.cuh  shift_corners.cuh  test_reduce.cuh  texture_update.cuh  tools_analysis.cuh  tools_compute.cuh  tools_conversion.cuh  tools_unwrap.cuh  unpack.cuh  vascular_pulse.cuh  vessel_enhancement.cuh  vesselness_filter.cuh
Backend/cuda_sources/: apply_mask.cu  barycentre.cu  bilateral_filter.cu  chart.cu  chart_mean_vessels.cu  complex_utils.cu  composite.cu  contrast_correction.cu  convolution.cu  filter2D.cu  frame_reshape.cu  fresnel_transform.cu  hsv.cu  input_filter.cu  laplacian_kernels.cu  masks.cu  noise_filter.cu  otsu.cu  percentile.cu  rgb.cu  segment_vessels.cu  texture_update.cu  tools_compute.cu  tools_conversion.cu  tools_hsv.cu  vessel_enhancement.cu
Backend/includes/: stdafx.hh
Backend/sources/: camera_dll.cc
Backend/tests/: CMakeLists.txt  test_analysis.cc  test_chart.cc  test_fast_updates_holder.cc  test_map.cc  test_reduce.cc  test_subsample_frame.cc
Camera/: CMakeLists.txt  CameraDLL.props
Camera/AmetekS710EuresysCoaxlinkOcto/: CMakeLists.txt  camera_phantom_s710.cc  camera_phantom_s710.hh
Camera/AmetekS711EuresysCoaxlinkQsfp+/: CMakeLists.txt  camera_phantom_s711.cc  camera_phantom_s711.hh
Camera/AmetekS991EuresysCoaxlinkQsfp+/: CMakeLists.txt  camera_phantom_s991.cc  camera_phantom_s991.hh
Camera/BaseCamera/: BaseCamera.vcxproj  camera.cc  camera_pimpl.hh
Camera/BitflowCyton/: CMakeLists.txt  bitflow_cyton.cc  bitflow_cyton.hh
Camera/Camera/: camera.hh  camera_logger.cc  camera_logger.hh  camera_utils.cc  camera_utils.hh
Camera/CameraASI/: CMakeLists.txt  camera_asi.cc  camera_asi.hh
Camera/CameraAdimec/: CMakeLists.txt  CameraAdimec.vcxproj  CameraAdimec.vcxproj.filters  camera_adimec.cc  camera_adimec.hh
Camera/CameraAlvium/: CMakeLists.txt  camera_alvium.cc  camera_alvium.hh
Camera/CameraCommon/: CMakeLists.txt
Camera/CameraHamamatsu/: CMakeLists.txt  CameraHamamatsu.vcxproj  CameraHamamatsu.vcxproj.filters  camera_hamamatsu.cc  camera_hamamatsu.hh
Camera/CameraIds/: CMakeLists.txt  CameraIds.vcxproj  CameraIds.vcxproj.filters  camera_ids.cc  camera_ids.hh
Camera/CameraIxon/: CMakeLists.txt  CameraIxon.vcxproj  CameraIxon.vcxproj.filters  camera_ixon.cc  camera_ixon.hh
Camera/CameraOpenCV/: CMakeLists.txt  camera_opencv.cc  camera_opencv.hh  internal_conversion.cc  internal_conversion.hh  internal_conversion.hxx
Camera/CameraPCO/: camera_pco.cc  camera_pco.hh
Camera/CameraPCOEdge/: CMakeLists.txt  CameraPCOEdge.vcxproj  CameraPCOEdge.vcxproj.filters  camera_pco_edge.cc  camera_pco_edge.hh
Camera/CameraPCOPixelfly/: CMakeLists.txt  CameraPCOPixelfly.cpp  CameraPCOPixelfly.h  CameraPCOPixelfly.vcxproj  CameraPCOPixelfly.vcxproj.filters  camera_pco_pixelfly.cc  camera_pco_pixelfly.hh
Camera/CameraPhantom/: CMakeLists.txt  camera_phantom.cc  camera_phantom.hh
Camera/CameraPhantomBitflow/: CMakeLists.txt  camera_phantom_bitflow.cc  camera_phantom_bitflow.hh
Camera/CameraPhotonFocus/: CMakeLists.txt  CameraPhotonFocus.vcxproj  CameraPhotonFocus.vcxproj.filters  camera_photon_focus.cc  camera_photon_focus.hh
Camera/CameraPike/: CMakeLists.txt  CameraPike.vcxproj  CameraPike.vcxproj.filters  camera_pike.cc  camera_pike.hh
Camera/CameraPixelink/: .camera_pixelink.cc.swp  CMakeLists.txt  camera_pixelink.cc  camera_pixelink.hh
Camera/CameraXib/: CMakeLists.txt  CameraXib.vcxproj  camera_xib.cc  camera_xib.hh
Camera/CameraXiq/: CMakeLists.txt  CameraXiq.vcxproj  CameraXiq.vcxproj.filters  camera_xiq.cc  camera_xiq.hh
Camera/CamerasPhantom/: CMakeLists.txt  camera_param.cc  camera_param.hh  camera_param.hxx  camera_param_map.cc  camera_param_map.hh  camera_param_map.hxx  camera_phantom_detection.cc  camera_phantom_interface.cc  camera_phantom_interface.hh  camera_phantom_interface.hxx
Camera/EuresysEGrabber/: CMakeLists.txt  euresys.cc  euresys.hh
Camera/configs/: adimec.ini  alvium.ini  asi.ini  bitflow.ini  ids.ini  (+8 more)
CameraUtils/: CMakeLists.txt  CameraUtils.vcxproj  utils.cc  utils.hh
GPIB/: CMakeLists.txt  GPIB.vcxproj  GPIB.vcxproj.filters  IVisaInterface.hh  batch_command.hh  device_init.c  device_init.h  gpib_controller.c  gpib_controller.cc  gpib_controller.h  gpib_controller.hh  gpib_exceptions.hh  parser.c  parser.h
Holovibes/: .gitignore  CHANGELOG.md  CMakeLists.txt  ClassDiagram.cd  Holovibes.qrc  Holovibes.rc  Holovibes.vcxproj  Holovibes.vcxproj.filters  MainWindow.ui  MainWindow.ui.bak  MainWindowAccessor.cc  MainWindowAccessor.hh  PlotWindow.ui  PropertySheet.props  README.md  adimec.ini  advancedSettingsWindow.ui  advancedsettingswindow.ui  advancedsettingswindow.ui.autosave  autofocus.cu  autofocus.cuh  average.cu  average.cuh  basic_widget.cc  basic_widget.hh  camera.cc  camera.hh  camera_dll.cc  camera_dll.hh  camera_edge.cc  camera_edge.hh  camera_exception.cc  camera_exception.hh  camera_ids.cc  camera_ids.hh  camera_ixon.cc  camera_ixon.hh  camera_loader.hh  camera_pco.cc  camera_pco.hh  (+195 more)
Ui/: CMakeLists.txt
docs/: CMakeLists.txt  Holo file format.md  HolovibesUserManual.docx  SETTINGS.md
(+2722 files in other folders)
